--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
+<html>
+<head>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Aluraflix</title>
+</head>
+
+<body>
+
 <header>ALURAFLIX</header>
 
-
+    
 <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME? 🕸️</h1>
 <p>#homem-aranha</p>
 
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=zt3duvVQtY23Pi27" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=h_arRwRfYfgxkjr9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
+</body>
+
+
+
+</html>
