--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<htm lang="pt-br">
+
 <head>
     <link rel="stylesheet" href="styles.css" />
     <title>Aluraflix</title>
@@ -6,17 +7,22 @@
 
 <body>
 
-<header>ALURAFLIX</header>
+    <header>ALURAFLIX</header>
 
-    
-<h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME? 🕸️</h1>
-<p>#homem-aranha</p>
-
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=h_arRwRfYfgxkjr9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <section>
+        <div>
+            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME? 🕸️</h1>
+            <p>#homem-aranha</p>
+        </div>
 
 
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=h_arRwRfYfgxkjr9"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
 </body>
 
